--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             padding: 5px;
             border-radius: 4px;
             cursor: pointer;
+            font-size: 16px; /* Ensure font size is 16px or larger */
         }
         .session-logs {
             color: #ffffff;
