--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
    body {
             font-family: 'Arial', sans-serif;
-            background-color: #1A1A1A;
+            background-color: #1a1a1a6b;
             color: #ffffff;
             display: flex;
             justify-content: center;
