--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>TekaTimer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <style>
-   body {
+        body {
             font-family: 'Arial', sans-serif;
-            background-color: #1a1a1a6b;
+            background-color: #1a1a1a;
             color: #ffffff;
             display: flex;
             justify-content: center;
@@ -15,15 +15,19 @@
             flex-direction: column;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
         .pomodoro {
+            position: relative;
             background-color: #2f3136;
             padding: 20px;
             border-radius: 8px;
             text-align: center;
             margin-bottom: 20px;
+            width: 80%;
+            max-width: 600px;
         }
-        .pomodoro h2, .session-logs h2 {
+        .pomodoro h2 {
             color: #ffffff;
         }
         .timer {
@@ -40,14 +44,14 @@
             font-size: 16px;
         }
         button:hover {
-            background-color: #353535;
+            background-color: #2f2f2f;
         }
         .controls, .session-title {
             display: flex;
             justify-content: space-around;
             margin-bottom: 20px;
         }
-        .time-settings, .sound-settings {
+        .time-settings, .sound-settings, .log-icon {
             display: flex;
             align-items: center;
         }
@@ -61,11 +65,42 @@
             padding: 5px;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 16px; /* Ensure font size is 16px or larger */
+            font-size: 16px; /* Ensuring font size is 16px or larger */
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 2;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+        .modal-content {
+            background-color: #2f3136;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 600px;
+            border-radius: 8px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
         }
         .session-logs {
-            color: #ffffff;
-            max-height: 200px;
+            max-height: 150px;
             overflow-y: auto;
         }
         .log-item {
@@ -74,11 +109,20 @@
             padding: 10px;
             border-radius: 4px;
         }
+        .log-icon {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <div class="pomodoro">
-        <h2>TekaTimer</h2>
+        <div class="log-icon">
+            <button id="log-btn">Logs</button>
+        </div>
+        <h2>Teka Timer</h2>
         <div class="session-title">
             <input type="text" id="session-title" placeholder="Session Title">
         </div>
@@ -104,11 +148,17 @@
         <button id="clear-logs-btn">Clear Logs</button>
         <button id="share-twitter">Share to Twitter</button>
     </div>
-    <div class="session-logs">
-        <h2>Session Logs</h2>
-        <div>Total Session Time: <span id="total-session-time">0 minutes</span></div>
-        <div id="logs"></div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Session Logs</h2>
+            <div class="session-logs" id="logs"></div>
+            <div>Total Session Time: <span id="total-session-time">0 minutes</span></div>
+        </div>
     </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const timerDisplay = document.getElementById('timer');
@@ -125,6 +175,23 @@
             let totalSessionSeconds = 0;
             let elapsedSeconds = 0;
             let isCountingUp = false;
+            var modal = document.getElementById("myModal");
+            var btn = document.getElementById("log-btn");
+            var span = document.getElementsByClassName("close")[0];
+
+            btn.onclick = function() {
+                modal.style.display = "block";
+            }
+
+            span.onclick = function() {
+                modal.style.display = "none";
+            }
+
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
 
             const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
