--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <body>
     <div class="pomodoro">
         <div class="log-icon">
-            <button id="log-btn">Logs</button>
+            <button id="log-btn">Session Log</button>
         </div>
         <h2>Teka Timer</h2>
         <div class="session-title">
@@ -145,7 +145,7 @@
         </div>
         <button id="start-btn">Start</button>
         <button id="stop-btn" style="display:none;">Stop</button>
-        <button id="clear-logs-btn">Clear Logs</button>
+        <button id="clear-logs-btn">Clear Log</button>
         <button id="share-twitter">Share to Twitter</button>
     </div>
 
@@ -153,7 +153,7 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>Session Logs</h2>
+            <h2>Session Log</h2>
             <div class="session-logs" id="logs"></div>
             <div>Total Session Time: <span id="total-session-time">0 minutes</span></div>
         </div>
