--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 <body>
     <div class="pomodoro">
         <div class="log-icon">
-            <button id="log-btn">Session Log</button>
+            <button id="log-btn" style="background: none; border: none; padding: 0; cursor: pointer;">
+                <img src="assets/session_log_timer.png" alt="Session Logs" style="width: 24px; height: 24px;">
+            </button>
         </div>
         <h2>Teka Timer</h2>
         <div class="session-title">
