--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             text-align: center;
             margin-bottom: 20px;
             width: 80%;
-            max-width: 600px;
+            width: 350px;
+            height: 350px;
         }
         .pomodoro h2 {
             color: #ffffff;
