--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             text-align: center;
             margin-bottom: 20px;
             width: 80%;
-            width: 400px;
+            width: 350px;
             height: 350px;
         }
         .pomodoro h2 {
@@ -40,7 +40,7 @@
             color: #ffffff;
             border: none;
             border-radius: 4px;
-            padding: 10px 20px;
+            padding: 10px 10px;
             cursor: pointer;
             font-size: 16px;
             margin: 5px;
@@ -181,7 +181,8 @@
         <div class="session-title">
             <input type="text" id="session-title" placeholder="Session Title">
         </div>
-        <div class="timer" id="timer">00:00</div>
+        <div class="watch-face">
+            <div class="timer" id="timer">00:00</div>
         <div class="controls">
             <div class="time-settings">
                 <label for="time-select">Time:</label>
@@ -193,6 +194,7 @@
                     <option value="1500">25m</option>
                 </select>
             </div>
+        </div>
             <div class="sound-toggle">
                 <label for="sound-toggle">Sound:</label>
                 <input type="checkbox" id="sound-toggle" checked>
